LU-5410 mdd: return errors from mdo_declare_ref_add()

In mdd_declare_object_initialize() ensure that errors from
mdo_declare_ref_add() are returned.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: I8ae9fa009577f862522f905b15fc6ee71ee00306
Reviewed-on: http://review.whamcloud.com/11222
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Fan Yong <fan.yong@intel.com>
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>